// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown List renders a default dropdown list 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list a non-default focused option 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={true}
    key=".1"
    label="2nd Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list an active and focused option 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={true}
    isFocused={true}
    key=".1"
    label="2nd Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list an active option 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".1"
    label="2nd Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={true}
    isFocused={false}
    key=".2"
    label="3rd Option"
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list with a set width 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": "440px",
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
</ul>
`;

exports[`Dropdown List renders a dropdown list with multiple children 1`] = `
<ul
  className="dropdown-list"
  style={
    Object {
      "width": undefined,
    }
  }
>
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={true}
    key=".0"
    label="1st Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".1"
    label="2nd Option"
    requestClose={[Function]}
  />
  <Option
    callback={[Function]}
    isActive={false}
    isFocused={false}
    key=".2"
    label="3rd Option"
    requestClose={[Function]}
  />
</ul>
`;
